Fixed problem with menu on mobile version

--- a/site/styles/header_mobile.less
+++ b/site/styles/header_mobile.less
@@ -54,7 +54,6 @@ header.visible a.menu svg {
 	fill: @color_active_link;
 }
 div.mobile_menu {
-	left: auto;
 	right: -200px;
 }
 
